crates/iota/src/unit_tests/snapshots/iota__upgrade_compatibility__upgrade_compatibility_tests__deponly.snap
---
source: crates/iota/src/upgrade_compatibility/../unit_tests/upgrade_compatibility_tests.rs
expression: normalize_path(err.to_string())
---
error[Compatibility E02001]: variant mismatch
  ┌─ /fixtures/upgrade_errors/deponly_errors_v2/sources/UpgradeErrors.move:4:18
  │
4 │ module upgrades::upgrades {
  │                  ^^^^^^^^ New unexpected enum 'NewEnum'.
  │
  = Enums are part of a module's public interface and cannot be changed during an upgrade.
  = Restore the original enum 'NewEnum' including the ordering.

error[Compatibility E03001]: function signature mismatch
  ┌─ /fixtures/upgrade_errors/deponly_errors_v2/sources/UpgradeErrors.move:4:18
  │
4 │ module upgrades::upgrades {
  │                  ^^^^^^^^ New unexpected function 'new_function'.
  │
  = Functions are part of a module's public interface and cannot be changed during an upgrade.
  = Restore the original function 'new_function' including the ordering.

error[Compatibility E01002]: type mismatch
  ┌─ /fixtures/upgrade_errors/deponly_errors_v2/sources/UpgradeErrors.move:7:19
  │
7 │     public struct NewStruct {
  │                   ^^^^^^^^^ New unexpected struct 'NewStruct'.
  │
  = Structs are part of a module's public interface and cannot be removed or changed during an upgrade.
  = Restore the original struct 'NewStruct' including the ordering.


Upgrade failed, this package requires changes to be compatible with the existing package. Its upgrade policy is set to 'dependency only'.
