crates/iota/src/unit_tests/snapshots/iota__upgrade_compatibility__upgrade_compatibility_tests__struct.snap
---
source: crates/iota/src/unit_tests/upgrade_compatibility_tests.rs
expression: normalize_path(err.to_string())
---
error[Compatibility E01003]: ability mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:10:19
   │
10 │     public struct AddExtraAbility has copy {} // added copy
   │                   ^^^^^^^^^^^^^^^ Unexpected ability: 'copy'
   │
   = Structs are part of a module's public interface and cannot be changed during an upgrade.
   = Restore the original abilities of struct 'AddExtraAbility': none.

error[Compatibility E01003]: ability mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:11:19
   │
11 │     public struct RemoveAbility has drop {} // removed copy
   │                   ^^^^^^^^^^^^^ Missing ability: 'copy'
   │
   = Structs are part of a module's public interface and cannot be changed during an upgrade.
   = Restore the original abilities of struct 'RemoveAbility': 'copy' and 'drop'.

error[Compatibility E01003]: ability mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:12:19
   │
12 │     public struct AddAndRemoveAbility has drop, store {} // remove copy, add store
   │                   ^^^^^^^^^^^^^^^^^^^ Mismatched abilities: missing 'copy', unexpected 'store'
   │
   = Structs are part of a module's public interface and cannot be changed during an upgrade.
   = Restore the original abilities of struct 'AddAndRemoveAbility': 'copy' and 'drop'.

error[Compatibility E01003]: ability mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:13:19
   │
13 │     public struct RemoveMultipleAbilities has drop {} // remove copy, store
   │                   ^^^^^^^^^^^^^^^^^^^^^^^ Missing abilities: 'copy' and 'store'
   │
   = Structs are part of a module's public interface and cannot be changed during an upgrade.
   = Restore the original abilities of struct 'RemoveMultipleAbilities': 'copy', 'drop', and 'store'.

error[Compatibility E01003]: ability mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:14:19
   │
14 │     public struct AddMultipleAbilities has drop, copy {}
   │                   ^^^^^^^^^^^^^^^^^^^^ Unexpected abilities: 'copy' and 'drop'
   │
   = Structs are part of a module's public interface and cannot be changed during an upgrade.
   = Restore the original abilities of struct 'AddMultipleAbilities': none.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:17:19
   │
17 │     public struct AddField {
   │                   ^^^^^^^^ Incorrect number of fields: expected 1, found 2
   │
   = Structs are part of a module's public interface and cannot be changed during an upgrade.
   = Restore the original struct's field for struct 'AddField' including the ordering.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:22:19
   │
22 │     public struct RemoveField {
   │                   ^^^^^^^^^^^ Incorrect number of fields: expected 2, found 1
   │
   = Structs are part of a module's public interface and cannot be changed during an upgrade.
   = Restore the original struct's fields for struct 'RemoveField' including the ordering.

error[Compatibility E01004]: field mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:30:9
   │
28 │     public struct ChangeFieldName {
   │                   --------------- Struct definition
29 │         a: u64,
30 │         c: u64, // changed from b to c
   │         ^ Mismatched field name 'c', expected 'b'.
   │
   = Structs are part of a module's public interface and cannot be changed during an upgrade.
   = Restore the original struct's fields for struct 'ChangeFieldName' including the ordering.

error[Compatibility E01002]: type mismatch
   ┌─ /fixtures/upgrade_errors/struct_errors_v2/sources/UpgradeErrors.move:36:9
   │
34 │     public struct ChangeFieldType {
   │                   --------------- Struct definition
35 │         a: u64,
36 │         b: u32, // changed to u32
   │         ^ Mismatched field type 'u32', expected 'u64'.
   │
   = Structs are part of a module's public interface and cannot be changed during an upgrade.
   = Restore the original struct's fields for struct 'ChangeFieldType' including the ordering.


Upgrade failed, this package requires changes to be compatible with the existing package. Its upgrade policy is set to 'compatible'.
